# rc-zip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  codecov.yml  dist-workspace.toml  flake.nix  rust-toolchain.toml
.config/: nextest.toml
.direnv/: flake-profile-1-link
.github/: dependabot.yml
.github/workflows/: release-plz.yml  release.yml  test.yml
crates/jean/: Cargo.toml
crates/jean/src/: main.rs
crates/rc-zip/: Cargo.toml
crates/rc-zip/src/: encoding.rs  error.rs  lib.rs  tests.rs
crates/rc-zip/src/format/: archive.rs  date_time.rs  directory_header.rs  eocd.rs  extra_field.rs  local.rs  mod.rs  parse.rs  raw.rs  version.rs
crates/rc-zip/src/reader/: archive_reader.rs  buffer.rs  macros.rs
crates/rc-zip/src/reader/sync/: decoder.rs  entry_reader.rs  read_zip.rs
crates/rc-zip/src/reader/sync/entry_reader/: bzip2_dec.rs  deflate64_dec.rs  lzma_dec.rs  lzma_support.rs  mod.rs
crates/rc-zip/testdata/: appnote.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: no_panic.rs
jean/: Cargo.toml
rc-zip/: CHANGELOG.md  Cargo.toml  README.md
rc-zip-cli/: CHANGELOG.md  Cargo.toml  README.md
rc-zip-cli/src/: main.rs  test.rs
rc-zip-cli/wix/: main.wxs
rc-zip-corpus/: CHANGELOG.md  Cargo.toml  README.md
rc-zip-corpus/src/: lib.rs
rc-zip-corpus/tests/: integration_tests.rs
rc-zip-monoio/: Cargo.toml
rc-zip-monoio/src/: lib.rs
rc-zip-sync/: CHANGELOG.md  Cargo.toml  README.md
rc-zip-sync/benches/: read.rs
rc-zip-sync/examples/: byte_count.rs  jean.rs  self_extracting.rs
rc-zip-sync/src/: decoder.rs  entry_reader.rs  lib.rs  read_zip.rs  streaming_entry_reader.rs
rc-zip-sync/src/entry_reader/: bzip2_dec.rs  deflate64_dec.rs  deflate_dec.rs  lzma_dec.rs  mod.rs  zstd_dec.rs
rc-zip-sync/tests/: integration_tests.rs  regression.rs  sizes.rs
rc-zip-tokio/: CHANGELOG.md  Cargo.toml  README.md
rc-zip-tokio/benches/: read.rs
rc-zip-tokio/src/: async_read_zip.rs  decoder.rs  entry_reader.rs  lib.rs  read_zip.rs  streaming_entry_reader.rs
rc-zip-tokio/src/entry_reader/: deflate_dec.rs  mod.rs
rc-zip-tokio/tests/: integration_tests.rs  regression.rs
rc-zip/src/: encoding.rs  error.rs  lib.rs  reader.rs
rc-zip/src/corpus/: mod.rs
rc-zip/src/format/: directory_header.rs  local.rs  mod.rs
rc-zip/src/fsm/: archive.rs  entry.rs  mod.rs
rc-zip/src/fsm/entry/: bzip2_dec.rs  deflate64_dec.rs  deflate_dec.rs  lzma_dec.rs  mod.rs  store_dec.rs  zstd_dec.rs
rc-zip/src/parse/: archive.rs  central_directory_file_header.rs  date_time.rs  directory_header.rs  eocd.rs  extra_field.rs  local.rs  local_headers.rs  mod.rs  mode.rs  raw.rs  version.rs
rc-zip/src/reader/: archive.rs  mod.rs
rc-zip/tests/: integration_tests.rs
resources/: extrafld.txt
resources/test-zips/: readme.notzip
samples/jean/: Cargo.toml
samples/jean/src/: main.rs
samples/rc-zip-sample/: Cargo.toml
samples/rc-zip-sample/src/: main.rs
src/: encoding.rs  error.rs  lib.rs  parser.rs  prelude.rs  tests.rs  types.rs
src/format/: archive.rs  date_time.rs  directory_header.rs  eocd.rs  extra_field.rs  local.rs  mod.rs  mode.rs  parse.rs  raw.rs  version.rs
src/parser/: mod.rs
src/reader/: archive_reader.rs  buffer.rs  dates.rs  decoder.rs  entry_reader.rs  macros.rs  mod.rs  nom_macros.rs  read_zip.rs
src/reader/async_ara/: decoder.rs  entry_reader.rs  mod.rs  read_zip.rs
src/reader/sync/: decoder.rs  entry_reader.rs  mod.rs  read_zip.rs
src/reader/sync/entry_reader/: bzip2_dec.rs  deflate64_dec.rs  deflate_dec.rs  lzma_dec.rs  mod.rs  zstd_dec.rs
src/reader/tokio/: decoder.rs  mod.rs  read_zip.rs
src/reader/tokio/entry_reader/: deflate_dec.rs  mod.rs
src/types/: mod.rs  raw.rs  version.rs
src/writer/: archive_writer.rs  mod.rs
testdata/: found-me.txt  wine-zeroed.zip.bz2
testdata/test-zips/: .gitignore
tests/: integration_tests.rs
