[workspace]
resolver = "2"
members = ["rc-zip-cli", "rc-zip", "rc-zip-sync", "rc-zip-tokio"]
exclude = ["fuzz"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
rc-zip = { version = "5.3.3", path = "./rc-zip" }
rc-zip-sync = { version = "4.3.2", path = "./rc-zip-sync" }

bzip2 = "0.6.0"
cfg-if = "1.0.0"
chardetng = "0.1.17"
chrono = { version = "0.4.33", default-features = false }
clap = {  version = "4.4.18", features = ["derive"] }
crc32fast = "1.3.2"
deflate64 = "0.1.7"
encoding_rs = "0.8.33"
futures-util = "0.3.30"
humansize = "2.1.3"
indicatif = "0.17.7"
lzma-rs = { version = "0.3.0", features = ["stream"] }
miniz_oxide = "0.7.1"
oem_cp = "2.0.0"
oval = "2.0.0"
ownable = "0.6.2"
pin-project-lite = "0.2.13"
positioned-io = "0.3.3"
temp-dir = "0.1.12"
thiserror = "1.0.56"
tokio = { version = "1.43.1", features = ["fs", "io-util", "rt"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
winnow = "0.5.36"
zstd = "0.13.0"
