[package]
name = "rc-zip-cli"
version = "1.0.0"
description = "A sample zip decompressor based on rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/bearcove/rc-zip"

[[bin]]
name = "rc-zip"
path = "src/main.rs"

[dependencies]
rc-zip = { version = "5.1.3", path = "../rc-zip", features = ["corpus"] }
rc-zip-sync = { version = "4.2.2", path = "../rc-zip-sync", features = [
    "bzip2",
    "deflate64",
    "lzma",
    "zstd",
] }
clap = { version = "4.4.18", features = ["derive"] }
humansize = "2.1.3"
indicatif = "0.17.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
cfg-if = "1.0.0"
