[package]
name = "rc-zip-cli"
version = "1.1.5"
description = "A sample zip decompressor based on rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/bearcove/rc-zip"

[package.metadata.wix]
upgrade-guid = "18C89328-5D29-4BB1-AC1F-4EF72F9AA12C"
path-guid = "8CFB1019-2508-41C8-9BC6-A59CF0F11449"
license = false
eula = false

[[bin]]
name = "rc-zip-cli"
path = "src/main.rs"

[dependencies]
rc-zip = { version = "5.3.3", path = "../rc-zip" }
rc-zip-sync = { version = "4.3.2", path = "../rc-zip-sync", features = [
    "bzip2",
    "deflate64",
    "lzma",
    "zstd",
] }
clap = { version = "4.4.18", features = ["derive"] }
humansize = "2.1.3"
indicatif = "0.17.7"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
cfg-if = "1.0.0"
