[package]
name = "rc-zip-corpus"
version = "0.1.1"
description = "A collection of zip files for testing"
repository = "https://github.com/bearcove/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"

[dependencies]
rc-zip.workspace = true
bzip2.workspace = true
chrono.workspace = true
temp-dir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
deflate = ["rc-zip/deflate"]
deflate64 = ["rc-zip/deflate64"]
bzip2 = ["rc-zip/bzip2"]
lzma = ["rc-zip/lzma"]
zstd = ["rc-zip/zstd"]
