[package]
name = "rc-zip-sync"
version = "4.2.6"
description = "Synchronous zip reading on top of rc-zip"
repository = "https://github.com/fasterthanlime/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip_sync"
path = "src/lib.rs"

[dependencies]
positioned-io = { version = "0.3.3", optional = true }
rc-zip = { version = "5.3.1", path = "../rc-zip" }
oval = "2.0.0"
tracing = "0.1.40"

[features]
default = ["file", "deflate"]
file = ["positioned-io"]
deflate = ["rc-zip/deflate"]
deflate64 = ["rc-zip/deflate64"]
lzma = ["rc-zip/lzma"]
bzip2 = ["rc-zip/bzip2"]
zstd = ["rc-zip/zstd"]
