[package]
name = "rc-zip-sync"
version = "4.3.3"
description = "Synchronous zip reading on top of rc-zip"
repository = "https://github.com/bearcove/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip_sync"
path = "src/lib.rs"

[dependencies]
positioned-io = { workspace = true, optional = true }
rc-zip.workspace = true
oval.workspace = true
tracing.workspace = true

[features]
default = ["file", "deflate"]
file = ["positioned-io"]
deflate = ["rc-zip/deflate"]
deflate64 = ["rc-zip/deflate64"]
lzma = ["rc-zip/lzma"]
bzip2 = ["rc-zip/bzip2"]
zstd = ["rc-zip/zstd"]

[dev-dependencies]
rc-zip = { workspace = true, features = ["corpus"] }
