[package]
name = "rc-zip-tokio"
version = "2.0.1"
description = "Asynchronous zip reading on top of rc-zip (for tokio I/O traits)"
repository = "https://github.com/fasterthanlime/rc-zip"
license = "Apache-2.0 or MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip_tokio"
path = "src/lib.rs"

[dependencies]
rc-zip = { version = "2.0.1", path = "../rc-zip" }
positioned-io = { version = "0.3.3" }
tokio = { version = "1.35.1", features = ["fs", "io-util", "rt-multi-thread"] }
futures = { version = "0.3.30" }
pin-project-lite = { version = "0.2.13" }
oval = "2.0.0"
crc32fast = "1.3.2"
tracing = "0.1.40"
cfg-if = "1.0.0"
winnow = "0.5.36"

[features]
default = ["deflate"]
deflate = ["rc-zip/deflate"]

