[package]
name = "rc-zip-tokio"
version = "4.2.3"
description = "Asynchronous zip reading on top of rc-zip (for tokio I/O traits)"
repository = "https://github.com/fasterthanlime/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"
rust-version = "1.75"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip_tokio"
path = "src/lib.rs"

[dependencies]
rc-zip = { version = "5.2.0", path = "../rc-zip" }
positioned-io = { version = "0.3.3" }
tokio = { version = "1.35.1", features = ["fs", "io-util", "rt-multi-thread"] }
futures-util = { version = "0.3.30" }
pin-project-lite = { version = "0.2.13" }
oval = "2.0.0"
tracing = "0.1.40"

[features]
default = ["deflate"]
deflate = ["rc-zip/deflate"]
deflate64 = ["rc-zip/deflate64"]
lzma = ["rc-zip/lzma"]
bzip2 = ["rc-zip/bzip2"]
zstd = ["rc-zip/zstd"]

[dev-dependencies]
rc-zip = { version = "5.2.0", path = "../rc-zip", features = ["corpus"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
