[package]
name = "rc-zip-tokio"
version = "4.3.1"
description = "Asynchronous zip reading on top of rc-zip (for tokio I/O traits)"
repository = "https://github.com/bearcove/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"
rust-version = "1.75"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip_tokio"
path = "src/lib.rs"

[dependencies]
rc-zip.workspace = true
positioned-io.workspace = true
tokio.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
oval.workspace = true
tracing.workspace = true

[features]
default = ["deflate"]
deflate = ["rc-zip/deflate", "rc-zip-corpus/deflate"]
deflate64 = ["rc-zip/deflate64", "rc-zip-corpus/deflate64"]
lzma = ["rc-zip/lzma", "rc-zip-corpus/lzma"]
bzip2 = ["rc-zip/bzip2", "rc-zip-corpus/bzip2"]
zstd = ["rc-zip/zstd", "rc-zip-corpus/zstd"]

[dev-dependencies]
divan.workspace = true
rc-zip-corpus.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "read"
harness = false
