[package]
name = "rc-zip"
version = "2.0.1"
description = "An I/O-agnostic implementation of the zip file format"
repository = "https://github.com/fasterthanlime/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "../README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip"
path = "src/lib.rs"

[dependencies]
winnow = "0.5.36"
pretty-hex = "0.4.1"
oval = "2.0.0"
chrono = "0.4.33"
encoding_rs = "0.8.33"
tracing = "0.1.40"
oem_cp = "2.0.0"
thiserror = "1.0.56"
chardetng = "0.1.17"
num_enum = "0.7.2"
cfg-if = "1.0.0"
crc32fast = "1.3.2"
miniz_oxide = { version = "0.7.1", optional = true }
deflate64 = { version = "0.1.7", optional = true }
bzip2 = { version = "0.4.4", optional = true }
lzma-rs = { version = "0.3.0", optional = true, features = ["stream"] }
zstd = { version = "0.13.0", optional = true }

[features]
corpus = []
deflate = ["dep:miniz_oxide"]
deflate64 = ["dep:deflate64"]
bzip2 = ["dep:bzip2"]
lzma = ["dep:lzma-rs"]
zstd = ["dep:zstd"]

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["tracing-subscriber", "trace"] }
