[package]
name = "rc-zip"
version = "5.3.2"
description = "An I/O-agnostic implementation of the zip file format"
repository = "https://github.com/fasterthanlime/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip"
path = "src/lib.rs"

[dependencies]
winnow = "0.5.36"
oval = "2.0.0"
chrono = { version = "0.4.33", default-features = false }
encoding_rs = "0.8.33"
tracing = "0.1.40"
oem_cp = "2.0.0"
thiserror = "1.0.56"
chardetng = "0.1.17"
crc32fast = "1.3.2"
miniz_oxide = { version = "0.7.1", optional = true }
deflate64 = { version = "0.1.7", optional = true }
bzip2 = { version = "0.6.0", optional = true }
lzma-rs = { version = "0.3.0", optional = true, features = ["stream"] }
zstd = { version = "0.13.0", optional = true }
ownable = "0.6.2"
temp-dir = { version = "0.1.12", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = [
    "env-filter",
] }

[features]
corpus = ["dep:temp-dir", "dep:bzip2", "dep:tracing-subscriber"]
deflate = ["dep:miniz_oxide"]
deflate64 = ["dep:deflate64"]
bzip2 = ["dep:bzip2"]
lzma = ["dep:lzma-rs"]
zstd = ["dep:zstd"]
tracing-subscriber = ["dep:tracing-subscriber"]
