[package]
name = "jean"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition = "2018"

[dependencies]
rc-zip = { path = "../rc-zip" }
clap = { version = "4.2.1", features = ["derive"] }
humansize = "2.0.0"
positioned-io.workspace = true
indicatif = "0.17.3"
