[package]
name = "jean"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"
publish = false

[dependencies]
rc-zip = { path = "../rc-zip" }
clap = { version = "4.4.18", features = ["derive"] }
humansize = "2.1.3"
positioned-io.workspace = true
indicatif = "0.17.7"
