[package]
name = "rc-zip"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"
description = "zip reading and writing"
readme = "../../README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[dependencies]
nom = "7.1.3"
pretty-hex = "0.4.1"
circular = "0.3.0"
chrono = "0.4.33"
encoding_rs = "0.8.33"
crc32fast = "1.3.2"
positioned-io = { workspace = true, optional = true }
tracing = "0.1.40"
oem_cp = "2.0.0"
thiserror = "1.0.56"
chardetng = "0.1.17"
flate2 = { version = "1.0.28", optional = true }
num_enum = "0.7.2"

[features]
default = ["sync", "file", "deflate"]
sync = []
file = ["positioned-io"]
deflate = ["flate2"]
