[package]
name = "rc-zip"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"
description = "zip reading and writing"
readme = "../../README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[dependencies]
winnow = "0.5.35"
pretty-hex = "0.4.1"
oval = "1.0.0"
chrono = "0.4.33"
encoding_rs = "0.8.33"
crc32fast = "1.3.2"
positioned-io = { workspace = true, optional = true }
tracing = "0.1.40"
oem_cp = "2.0.0"
thiserror = "1.0.56"
chardetng = "0.1.17"
flate2 = { version = "1.0.28", optional = true }
num_enum = "0.7.2"
byteorder = "1.5.0"
cfg-if = "1.0.0"
lzma-rs = { version = "0.3.0", features = ["stream"], optional = true }
deflate64 = { version = "0.1.7", optional = true }
bzip2 = { version = "0.4.4", optional = true }

[features]
default = ["sync", "file", "deflate"]
sync = []
file = ["positioned-io"]
deflate = ["dep:flate2"]
deflate64 = ["dep:deflate64"]
lzma = ["dep:lzma-rs"]
bzip2 = ["dep:bzip2"]

[dev-dependencies]
tracing-test = "0.2.4"
