[package]
name = "rc-zip-sample"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[features]
default = ["color-backtrace", "env_logger"]

[dependencies]
rc-zip = { path = "../.." }
clap = "2.33.0"
humansize = "1.1.0"
color-backtrace = { version = "0.2.2", optional = true }
env_logger = { version = "0.6.2", optional = true }
tabwriter = "1.1.0"
